=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=over

=item *

Replaced Archive::Tar in Krag::DataSet->new with the system 'tar' for a 50x 
speedup in untaring

=item *

Removed code from Krang::Contrib that disallowed stories with existing historical
contrib-contrib_type pairs to preview/publish.

=back

=head2 v1.018 - May 10, 2004

=over

=item *

Fixed permissions error during upgrade backup creation. [Sam]

=item *

Fixed bug where permissions were not being applied to the Find Link
and Active list screens. [Sam]

=item *

Fixed a bug in Krang::Group which caused root-category permisssions to
be randomized during rebuild_category_cache().  [Sam]

=item *

Added C<--no-backup> option to C<krang_upgrade>. [Sam]

=item *

Fixed bug in C<bin/krang_publish> where unknown errors during story
publish would trigger an exit without any kind of useful message.  The
error is now printed to STDERR. [Peter]

=item *

Changed Krang to log and drop elements which exceed the maximum
allowed by their parent element.  This mirrors the behavior for
elements with illegal class names.  This allows for an easier element
set development process at the risk of possible data loss, which is
somewhat mitigated by the built in revision system. [Sam]

=item *

Fixed Krang::ElementLibrary to return a sorted list from top_levels().
This results in a sorted list or article types in the UI.  [Sam]

=item *

Added a new hidden user called 'system' which is now used by
Krang::Script.  This means you can now delete the 'admin' user with
impunity. [Sam]

=item *

Fixed bug where Krang::ElementClass::TopLevel::publish_check() was not
being checked by Krang::Schedule.  Stories that are marked to not be
published by the scheduler will now have their wishes respected.
[Peter]

=item *

Fixed bug where contributors created by C<krang_import> weren't
searchable in the UI unless they had first, middle and last
names. [Sam]

=item *
